# CipherChallengeTools

./: .gitignore  README.md  affine.py  affine_brute.py  keywords.py  temp.py  transposition.py  utils.py  vigenere.py
CCipher/: CMakeLists.txt  main.cpp
CCipher/ciphers/: transposition.cpp  transposition.h
CCipher/stats/: distribution.cpp  distribution.h
CCipher/textutils/: ngrams.cpp  ngrams.h  treatment.cpp  treatment.h
